--- a/index.html
+++ b/index.html
@@ -255,40 +255,40 @@
                 legendOptions: {
                     title: "夺冠次数"
                 },
-                uniqueValueInfos: [
+                uniqueValueInfos: uniqueValueInfos: [
                     {
                         value: "5",
                         symbol: {
                             type: "simple-fill",
-                            color: "#d7191c"
+                            color: "#288835"
                         }
                     },
                     {
                         value: "4",
                         symbol: {
                             type: "simple-fill",
-                            color: "#fdae61"
+                            color: "#35ac46"
                         }
                     },
                     {
                         value: "3",
                         symbol: {
                             type: "simple-fill",
-                            color: "#ffffbf"
+                            color: "#61c66f"
                         }
                     },
                     {
                         value: "2",
                         symbol: {
                             type: "simple-fill",
-                            color: "#abd9e9"
+                            color: "#99e3a3"
                         }
                     },
                     {
                         value: "1",
                         symbol: {
                             type: "simple-fill",
-                            color: "#2c7bb6"
+                            color: "#b5f1bd"
                         }
                     }
                 ]
