--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 legendOptions: {
                     title: "夺冠次数"
                 },
-                uniqueValueInfos: uniqueValueInfos: [
+                uniqueValueInfos:[
                     {
                         value: "5",
                         symbol: {
