--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
                 type: "unique-value",
                 field: "champion",
                 legendOptions: {
-                    title: "夺冠次数"
+                    title: "c"
                 },
-                uniqueValueInfos:[
+                uniqueValueInfos: [
                     {
                         value: "5",
                         symbol: {
@@ -293,6 +293,9 @@
                     }
                 ]
             }
+
+
+
 
 
 
