--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 type: "unique-value",
                 field: "champion",
                 legendOptions: {
-                    title: "c"
+                    title: "夺冠次数"
                 },
                 uniqueValueInfos: [
                     {
